fix: Set the balance-sync prompt nowrap

--- a/packages/neuron-ui/src/components/Send/send.module.scss
+++ b/packages/neuron-ui/src/components/Send/send.module.scss
@@ -93,6 +93,8 @@ $textfieldWidth: calc(100vw - 370px);
     color: var(--nervos-green);
     font-size: 0.8rem;
     margin-top: 3px;
+    word-break: keep-all;
+    white-space: nowrap;
   }
 }
 
